--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>video-call</title>
+    <title>Video Call</title>
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -12,37 +11,37 @@
     <div id="vid-box"></div>
 
     <form name="loginForm" id="login" action="#" onsubmit="return login(this);">
-        <input type="text" name="username" id="username" placeholder="Pick a username!" />
-        <input type="submit" name="login_submit" value="Log In">
+      <input type="text" name="username" id="username" placeholder="Pick a username!" />
+      <input type="submit" name="login_submit" value="Log In">
     </form>
 
     <form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
     	<input type="text" name="number" placeholder="Enter user to dial!" />
     	<input type="submit" value="Call"/>
     </form>
-  </body>
 
-  <script type="text/javascript">
-    var video_out = document.getElementById("vid-box");
+    <script>
+      var video_out = document.getElementById("vid-box");
 
-    function login(form) {
-    	var phone = window.phone = PHONE({
+      function login(form) {
+      	var phone = window.phone = PHONE({
     	    number        : form.username.value || "Anonymous", // listen on username line else Anonymous
     	    publish_key   : 'pub-c-7eedd7b0-f7b3-49fd-a2fd-3be3912e4b9f',
     	    subscribe_key : 'sub-c-92354a56-b28d-11e7-9eb5-def16b84ebc1',
-    	});
-    	phone.ready(function(){ form.username.style.background="#55ff5b"; });
-    	phone.receive(function(session){
+      	});
+      	phone.ready(function(){ form.username.style.background="#55ff5b"; });
+      	phone.receive(function(session){
     	    session.connected(function(session) { video_out.appendChild(session.video); });
     	    session.ended(function(session) { video_out.innerHTML=''; });
-    	});
-    	return false; 	// So the form does not submit.
-    }
+      	});
+      	return false; 	// So the form does not submit.
+      }
 
-    function makeCall(form){
-    	if (!window.phone) alert("Login First!");
-    	else phone.dial(form.number.value);
-    	return false;
-    }
-  </script>
+      function makeCall(form){
+      	if (!window.phone) alert("Login First!");
+      	else phone.dial(form.number.value);
+      	return false;
+      }
+    </script>
+  </body>
 </html>
