--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     <form name="loginForm" id="login" action="#" onsubmit="return login(this);">
       <input type="text" name="username" id="username" placeholder="Pick a username!" />
-      <input type="submit" name="login_submit" value="Log In">
+      <input type="button" name="login_submit" value="Log In">
     </form>
 
     <form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
     	<input type="text" name="number" placeholder="Enter user to dial!" />
-    	<input type="submit" value="Call"/>
+    	<input type="button" value="Call"/>
     </form>
 
     <script>
